# 01.cmake

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  README.md  docker-compose.yml  jenkinsfile  main.cpp  test_version.cpp  version.h.in
.github/workflows/: pipeline.yml
